feat(3.15.2): move apiConfig add SystemUser